# wakflo-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build.rs
.github/workflows/: main.yml  publish.yml  release.yml
docs/: apidocs.swagger.json  openapi.yaml
installer/: Cargo.toml  install.sh
installer/.cargo/: cargo.toml
installer/src/: main.rs
src/: main.rs
src/api/: auth.rs  category.rs  mod.rs  upload.rs
src/commands/: auth.rs  global.rs  mod.rs  new.rs  plugin.rs  task.rs
src/templates/: go.rs  js.rs  mod.rs  rust.rs
src/utils/: build.rs  dir_files.rs  mod.rs  plugin.rs  types.rs
