[package]
name = "wakflo"
version = "0.0.1"
edition = "2021"
description = "A commandline utility for wakflo.ai services"
authors = ["Wakflo LLC <team@wakflo.ai>"]
license-file = "LICENSE.txt"
readme = "README.md"
homepage = "https://wakflo.ai"
repository = "https://github.com/wakflo/wakflo-cli"
keywords = ["rust", "build", "tool"]
categories = ["build", "rust-build-tools"]

[[bin]]
name = "wakflo"
path = "src/main.rs"

[build-dependencies]
rustc_version = "0.4.0"

[dependencies]
anyhow = "1.0.57"
dirs = "5.0.0"
sysinfo = "0.28.4"
rustc_version = "0.4.0"
serde_json = "1.0.81"
convert_case = "0.6.0"
fs_extra = "1.3"
tokio = { version = "1", features = ["full"] }
loading = "0.3"
human-panic = "1.0.3"
dialoguer = "0.10.4"
console = "0.15"
liquid = "0.26.1"
strum_macros = "0.24"
ureq = { version = "2.6", features = ["json", "cookies"] }
strum = { version = "0.24", features = ["derive"] }

[dependencies.clap]
version = "4.2.4"
features = ["cargo", "std", "color", "suggestions", "derive"]

[dependencies.clap_complete_command]
version = "0.5.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.7.3"
features = ["preserve_order"]

[dependencies.uuid]
version = "1.0.0"
features = ["serde", "v4"]

[profile.dev]
opt-level = 0
debug = 2
incremental = true

