[package]
name = "wakflo"
version = "0.3.4"
edition = "2021"
description = "A commandline utility for wakflo.ai services"
authors = ["Wakflo LLC <team@wakflo.ai>"]
license-file = "LICENSE.txt"
readme = "README.md"
homepage = "https://wakflo.ai"
repository = "https://github.com/wakflo/wakflo-cli"
keywords = ["rust", "build", "tool"]
categories = ["development-tools"]

[[bin]]
name = "wakflo"
path = "src/main.rs"

[build-dependencies]
rustc_version = "0.4.0"

[dependencies]
anyhow = "1.0.57"
dirs = "5.0.0"
sysinfo = "0.29.7"
rustc_version = "0.4.0"
serde_json = "1.0.81"
convert_case = "0.6.0"
fs_extra = "1.3"
loading = "0.3"
human-panic = "1.0.3"
dialoguer = "0.10.4"
console = "0.15"
liquid = "0.26.1"
strum_macros = "0.25.2"
regex = "1.9"
human_regex = "0.3"
ureq_multipart = "1"
scan_dir = "0.3"
futures = { version = "0.3.28" }
tokio = { version = "1", features = ["full"] }
ureq = { version = "2.6", features = ["json", "cookies"] }
strum = { version = "0.25.0", features = ["derive"] }
wakflo-sdk = { path = "../wakflo-rs/crates/wakflo-sdk" }
ory-client = "1.1.41"

[dependencies.clap]
version = "4.2.4"
features = ["cargo", "std", "color", "suggestions", "derive"]

[dependencies.clap_complete_command]
version = "0.5.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.7.6"
features = ["preserve_order"]

[dependencies.uuid]
version = "1.0.0"
features = ["serde", "v4"]

[profile.dev]
opt-level = 0
debug = 2
incremental = true

[profile.release]
strip = true
codegen-units = 1
lto = true

